--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,8 @@ jobs:
 #         run: mysql -uroot -p'password' -h127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -e "show variables where Variable_name in ('server_id','log_bin','lower_case_table_names','version');"
 
       - run: sudo apt-get install -y chromium-browser
-      - run: service chromium-browser start
+      - run: chromium-browser --headless --remote-debugging-port=9222 &
+      - run: ps aux |grep chromium-browser | grep -q -v grep
 #       - uses: actions/setup-node@v1
 #       - run: npm i -g ts-node typescript
 #       - run: npm i
