--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -24,6 +24,15 @@ jobs:
       storage_channel_page: storage/${{matrix.channel_id}}/page
       channel_page_url: https://raw.githubusercontent.com/shinhwagk/test/cfb-storage/${{matrix.channel_id}}/page
     steps:
+      - run: |
+          sudo apt-get install -y chromium-browser
+          chromium-browser --headless --remote-debugging-port=9222 &
+          sleep 5
+          l1=`curl -s http://127.0.0.1:9222/json/version | grep 'webSocketDebuggerUrl' | grep -v grep`
+          l2=${l1##*/}
+          uuid=`echo ${l2:: -1}`
+          echo $uuid
+          echo ::set-env name=::$uuid
       - name: Checkout cfb bin
         uses: actions/checkout@v2
         with:
