--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -258,8 +258,8 @@ jobs:
           function push_drive() {
             echo "push $1"
             startT=`date +%s`
-            rfpath=`dirname ${1}`; thread_id=${rfpath##*/}
-            python ./bin/push.py ${{matrix.channel_id}} ${thread_id} "${1}" && rm -f ${1}
+            rfpath=`dirname ${1}`; thread_id=${rfpath##*/}; file_name=`basename $1`
+            python ./bin/push.py ${{matrix.channel_id}} ${thread_id} "${1}" && rm -f ${storage_channel_threads_success}/${thread_id}/${file_name}
             endT=`date +%s`;
             echo "push time $(($endT-$startT))"
           }
