--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -255,6 +255,7 @@ jobs:
           crypto-password: ${{secrets.cfb_password}}
       - name: push drive
         run: |
+          ls -l $tempspace
           function push_drive() {
             echo "push $1"
             startT=`date +%s`
