--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -260,12 +260,18 @@ jobs:
             echo "push $1"
             startT=`date +%s`
             rfpath=`dirname ${1}`; thread_id=${rfpath##*/}; file_name=`basename $1`
+            echo "push args: ${{matrix.channel_id}} ${thread_id} ${1}"
             python ./bin/push.py ${{matrix.channel_id}} ${thread_id} "${1}"
             endT=`date +%s`;
             echo "push time $(($endT-$startT))"
           }
+          parl=0
           while read rawfile; do
+            let parl+=1
             push_drive $rawfile && rm -f $rawfile &
+            if [ $parl == 10 ]; then
+              wait; parl=0; sleep 1;
+            fi
           done <<< `find ${tempspace} -type f`
           wait
       - name: Config Github name & email
