--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -266,7 +266,9 @@ jobs:
           parl=0
           while read rawfile; do
             let parl+=1
-            push_drive $rawfile && rm -f $rawfile &
+            source_file=${rawfile/$tempspace/$storage_channel_threads_success}
+            echo $source_file
+            push_drive $rawfile && rm -f $source_file &
             if [ $parl == 10 ]; then
               wait; parl=0; sleep 1;
             fi
