--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -274,6 +274,7 @@ jobs:
             fi
           done <<< `find ${tempspace} -type f`
           wait
+          cd storage && git status -s
       - name: Config Github name & email
         if: success()
         run: |
