--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -275,8 +275,7 @@ jobs:
             fi
           done <<< `find ${tempspace} -type f`
           wait
-          cd storage && git status -s
-          cd storage; git log HEAD^
+          cd storage; ls -lah ;git log;
       - name: Config Github name & email
         run: |
           git config --global user.name ${GITHUB_ACTOR}
