--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -266,21 +266,19 @@ jobs:
             let parl+=1
             source_file=${rawfile/$tempspace/$storage_channel_threads_success}
             echo $source_file
-            ls -l $source_file && push_drive $rawfile && rm -f $source_file && ls -l $source_file &
+            push_drive $rawfile && rm -f "${source_file}.enc" &
             if [ $parl == 10 ]; then
               wait; parl=0; sleep 1;
             fi
           done <<< `find ${tempspace} -type f`
           wait
-          pwd; ls -la; cd storage; ls -lah ;git log;git status -s;
-          echo b>b
       - name: Config Github name & email
         run: |
           git config --global user.name ${GITHUB_ACTOR}
           git config --global user.email ${GITHUB_ACTOR}@my-domain.io
       - name: push
         run: |
-          cd storage; ls -la ; echo a> a;
+          cd storage;
           git add -A
           git status -s
           [ `git status -s | wc -l` != 0 ] && \
