--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -3,8 +3,8 @@ on:
   push:
     paths:
       - ".github/workflows/cfb.yml"
-#   schedule:
-#     - cron: "*/2 * * * *"
+  schedule:
+    - cron: "*/2 * * * *"
 
 jobs:
   step1:
@@ -15,7 +15,7 @@ jobs:
       matrix:
         channel_id: [25, 143, 230, 229]
     env:
-      page_number: 1
+      page_number: 30
       tempspace: tempspace
       tempspace_threads: tempspace/threads
       tempspace_page: tempspace/page
@@ -114,7 +114,7 @@ jobs:
       matrix:
         channel_id: [25, 143, 230, 229]
     env:
-      thread_number: 1
+      thread_number: 30
       tempspace: tempspace
       tempspace_threads: tempspace/threads
       storage_channel: storage/${{matrix.channel_id}}
@@ -223,7 +223,7 @@ jobs:
       matrix:
         channel_id: [25, 143, 230, 229]
     env:
-      push_number: 1
+      push_number: 30
       tempspace: tempspace
       storage_channel_threads_success: storage/${{matrix.channel_id}}/threads_success
     steps:
