--- a/.github/workflows/cfb-clean.yml
+++ b/.github/workflows/cfb-clean.yml
@@ -21,44 +21,46 @@ jobs:
           cd storage;
           git checkout -b cfb-storage@25
           rm -fr 143 229 230
-          git add -A; git commit -m "save"
-          git push
-      - name: Checkout cfb storage
-        if: success()
-        uses: actions/checkout@v2
-        with:
-          path: storage
-          ref: "cfb-storage"
-      - name: Clean1
-        run: |
-          cd storage/${{matrix.channel_id}}/threads
-          ls ./ | while read line; do [ -d $line ] && rm -fr $line; done
-      - name: Clean2
-        run: |
-          cd storage/${{matrix.channel_id}}
-          rm -fr ./*.json.enc
-          rm -fr ./*.json
-      - name: Clean3
-        run: |
-          rm -fr storage/${{matrix.channel_id}}_success
-      - name: Clean4
-        run: |
-          rm -fr storage/checkpoint
-      - name: Config Github name & email
-        run: |
           git config --global user.name ${GITHUB_ACTOR}
           git config --global user.email ${GITHUB_ACTOR}@my-domain.io
-      - name: push
-        if: success()
-        run: |
-          cd storage
-          git add -A
-          [ `git status -s | wc -l` != 0 ] && \
-          git commit -q -m "cfb clean ${{matrix.channel_id}}"
-          for i in $(seq 1 5); do
-            echo "push start ##########################"
-            git push && exit 0 || git pull -q --rebase
-            sleep 5
-            echo "retry ${i}."
-          done
-          exit 1
+          git add -A; git commit -m "save"
+          git push
+#       - name: Checkout cfb storage
+#         if: success()
+#         uses: actions/checkout@v2
+#         with:
+#           path: storage
+#           ref: "cfb-storage"
+#       - name: Clean1
+#         run: |
+#           cd storage/${{matrix.channel_id}}/threads
+#           ls ./ | while read line; do [ -d $line ] && rm -fr $line; done
+#       - name: Clean2
+#         run: |
+#           cd storage/${{matrix.channel_id}}
+#           rm -fr ./*.json.enc
+#           rm -fr ./*.json
+#       - name: Clean3
+#         run: |
+#           rm -fr storage/${{matrix.channel_id}}_success
+#       - name: Clean4
+#         run: |
+#           rm -fr storage/checkpoint
+#       - name: Config Github name & email
+#         run: |
+#           git config --global user.name ${GITHUB_ACTOR}
+#           git config --global user.email ${GITHUB_ACTOR}@my-domain.io
+#       - name: push
+#         if: success()
+#         run: |
+#           cd storage
+#           git add -A
+#           [ `git status -s | wc -l` != 0 ] && \
+#           git commit -q -m "cfb clean ${{matrix.channel_id}}"
+#           for i in $(seq 1 5); do
+#             echo "push start ##########################"
+#             git push && exit 0 || git pull -q --rebase
+#             sleep 5
+#             echo "retry ${i}."
+#           done
+#           exit 1
