--- a/.github/workflows/cfb-clean.yml
+++ b/.github/workflows/cfb-clean.yml
@@ -16,27 +16,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: storage
-          ref: "cfb-storage"
+          ref: "cfb-storage@${{matrix.channel_id}}"
       - run: |
-          cid=${{matrix.channel_id}}
           cd storage;
-          git checkout -b cfb-storage@${cid}
-          if [ $cid == 25 ]; then
-            rm -fr 143 230 229
-          fi
-          if [ $cid == 143 ]; then
-            rm -fr 25 230 229
-          fi
-          if [ $cid == 230 ]; then
-            rm -fr 143 25 229
-          fi
-          if [ $cid == 229 ]; then
-            rm -fr 143 230 25
-          fi
+          mv ${{matrix.channel_id}}/* ./
+          rm -fr ${{matrix.channel_id}}/
+          
           git config --global user.name ${GITHUB_ACTOR}
           git config --global user.email ${GITHUB_ACTOR}@my-domain.io
           git add -A; git commit -m "save"
-          git push --set-upstream origin cfb-storage@${cid}
+          git push
 #       - name: Checkout cfb storage
 #         if: success()
 #         uses: actions/checkout@v2
