--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -3,8 +3,8 @@ on:
   push:
     paths:
       - ".github/workflows/cfb.yml"
-  schedule:
-    - cron: "*/10 * * * *"
+#   schedule:
+#     - cron: "*/10 * * * *"
 
 jobs:
   step1:
@@ -243,7 +243,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: storage
-          ref: "cfb-storage@${{matrix.channel_id}}"
+          ref: "refs/heads/cfb-storage@${{matrix.channel_id}}"
       - run: cd storage; ls -lah ;git log;
       - uses: actions/setup-python@v1
       - run: pip install requests
