--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -3,8 +3,8 @@ on:
   push:
     paths:
       - ".github/workflows/cfb.yml"
-#   schedule:
-#     - cron: "*/10 * * * *"
+  schedule:
+    - cron: "*/20 * * * *"
 
 jobs:
   step1:
