--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -102,7 +102,8 @@ jobs:
         run: |
           mkdir -p ${storage_channel_threads}
           cp -r ${tempspace}/* ${storage_channel_threads}/
-          echo ${page} > ${storage_channel_page}
+          savePath=$(($page-5))
+          echo ${savePath} > ${storage_channel_page}
           cd storage
           git add -A
           [ `git status -s | wc -l` != 0 ] && \
