--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -14,7 +14,7 @@ jobs:
         ports: 
           - 3306
         env:
-          MYSQL_ROOT_PASSWORD: 123456
+          MYSQL_ROOT_PASSWORD: 1234567
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
