--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -230,6 +230,7 @@ jobs:
             echo "retry ${i}."
           done
   step3:
+    needs: [step2]
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
