--- a/.github/workflows/cfb.yml
+++ b/.github/workflows/cfb.yml
@@ -131,6 +131,11 @@ jobs:
       storage_channel_threads_success: storage/threads_success
       storage_channel_threads_error: storage/threads_error
     steps:
+      - name: Config Github name & email
+        if: success() || cancelled()
+        run: |
+          git config --global user.name ${GITHUB_ACTOR}
+          git config --global user.email ${GITHUB_ACTOR}@my-domain.io
       - run: |
           sudo apt-get install -y chromium-browser
           chromium-browser --headless --remote-debugging-port=9222 &
@@ -285,23 +290,19 @@ jobs:
             if [ $parl == 10 ]; then
               wait; parl=0; sleep 1;
             fi
+            bash bin/push.sh storage "channel ${{ matrix.channel_id }} push ${push_number}"
           done <<< `find ${tempspace} -type f`
           wait
-      - name: Config Github name & email
-        if: success() || cancelled()
-        run: |
-          git config --global user.name ${GITHUB_ACTOR}
-          git config --global user.email ${GITHUB_ACTOR}@my-domain.io
-      - name: push
-        if: success() || cancelled()
-        run: |
-          cd storage;
-          git add -A
-          git status -s
-          [ `git status -s | wc -l` != 0 ] && \
-          git commit -q -m "channel ${{ matrix.channel_id }} push ${push_number}"
-          for i in $(seq 1 5); do
-            git push && exit 0 || git pull -q --rebase
-            sleep 5
-            echo "retry ${i}."
-          done
+#       - name: push
+#         if: success() || cancelled()
+#         run: |
+#           cd storage;
+#           git add -A
+#           git status -s
+#           [ `git status -s | wc -l` != 0 ] && \
+#           git commit -q -m "channel ${{ matrix.channel_id }} push ${push_number}"
+#           for i in $(seq 1 5); do
+#             git push && exit 0 || git pull -q --rebase
+#             sleep 5
+#             echo "retry ${i}."
+#           done
